[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://data/images/screens/start_screen.png" type="Texture" id=2]
[ext_resource path="res://data/images/screens/credits_screen.png" type="Texture" id=3]
[ext_resource path="res://data/images/screens/controls_page.png" type="Texture" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="main_container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 762.0
margin_top = 81.0
margin_right = 50.0
margin_bottom = 50.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="smallcontainer1" type="VBoxContainer" parent="main_container"]
margin_left = 39.0
margin_top = -22.0
margin_right = 357.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="play" type="Button" parent="main_container/smallcontainer1" groups=["main_menu_buttons", "menu_buttons"]]
margin_right = 38.0
margin_bottom = 136.0
size_flags_horizontal = 2
size_flags_vertical = 3
text = "play"

[node name="controls" type="Button" parent="main_container/smallcontainer1" groups=["main_menu_buttons", "menu_buttons"]]
margin_top = 156.0
margin_right = 64.0
margin_bottom = 292.0
size_flags_horizontal = 2
size_flags_vertical = 3
text = "controls"

[node name="credits" type="Button" parent="main_container/smallcontainer1" groups=["main_menu_buttons", "menu_buttons"]]
margin_top = 312.0
margin_right = 56.0
margin_bottom = 448.0
size_flags_horizontal = 2
size_flags_vertical = 3
text = "credits"

[node name="smallcontainer2" type="Container" parent="main_container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 454.0
margin_right = 71.0
margin_bottom = -5.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="quit" type="Button" parent="main_container/smallcontainer2" groups=["main_menu_buttons", "menu_buttons"]]
margin_left = 1.0
margin_top = -3.0
margin_right = 207.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "quit"

[node name="level_1" type="Button" parent="." groups=["level_buttons", "menu_buttons"]]
visible = false
margin_left = 321.0
margin_top = 118.0
margin_right = 787.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "level1"

[node name="level_2" type="Button" parent="." groups=["level_buttons", "menu_buttons"]]
visible = false
margin_left = 323.0
margin_top = 315.0
margin_right = 808.0
margin_bottom = 457.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "level2"

[node name="level_3" type="Button" parent="." groups=["level_buttons", "menu_buttons"]]
visible = false
margin_left = 388.0
margin_top = 498.0
margin_right = 728.0
margin_bottom = 621.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "level3"

[node name="endless" type="Button" parent="." groups=["level_buttons", "menu_buttons"]]
visible = false
margin_left = 207.0
margin_top = 45.0
margin_right = 938.0
margin_bottom = 95.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "endless mode"

[node name="credits_screen" type="Sprite" parent="." groups=["screens"]]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="controls_screen" type="Sprite" parent="." groups=["screens"]]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="sound_off" type="Button" parent="." groups=["menu_buttons", "sound_buttons"]]
visible = false
margin_left = 42.0
margin_top = 560.0
margin_right = 113.0
margin_bottom = 602.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "sound off"

[node name="sound_on" type="Button" parent="." groups=["menu_buttons", "sound_buttons"]]
margin_left = 38.0
margin_top = 564.0
margin_right = 114.0
margin_bottom = 604.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "sound on"

[node name="music_off" type="Button" parent="." groups=["menu_buttons", "sound_buttons"]]
visible = false
margin_left = 35.0
margin_top = 622.0
margin_right = 137.0
margin_bottom = 670.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "music off"

[node name="music_on" type="Button" parent="." groups=["menu_buttons", "sound_buttons"]]
margin_left = 40.0
margin_top = 628.0
margin_right = 133.0
margin_bottom = 671.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "music on"

[node name="back" type="Button" parent="." groups=["menu_buttons"]]
visible = false
margin_left = 50.0
margin_top = 617.0
margin_right = 174.0
margin_bottom = 677.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "back"

[connection signal="pressed" from="main_container/smallcontainer1/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main_container/smallcontainer1/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="main_container/smallcontainer1/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="main_container/smallcontainer2/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="sound_off" to="." method="_on_sound_off_pressed"]
[connection signal="pressed" from="sound_on" to="." method="_on_sound_on_pressed"]
[connection signal="pressed" from="music_off" to="." method="_on_music_off_pressed"]
[connection signal="pressed" from="music_on" to="." method="_on_music_on_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
